// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/app-promo should display an app promo on mobile Android devices 1`] = `
<div
  class="notes"
>
  <div>
    Notes list
  </div>
  <div>
    Note
  </div>
  <div>
    Notes slider
  </div>
  <div>
    Notifications
  </div>
  <div>
    Note delete confirmation dialog
  </div>
  <div
    class="app-promo"
  >
    <div
      class="app-promo__icon"
    />
    <div
      class="app-promo__message"
    >
      <span>
        Для редактирования заметок установите 
        <lego-components_link
          data-ref="link"
          href="https://redirect.appmetrica.yandex.com/serve/1106970954573105017?click_id={LOGID}"
          rel="noopener noreferrer"
          target="_blank"
          theme="normal"
        >
          приложение Яндекс Диск
        </lego-components_link>
      </span>
    </div>
  </div>
</div>
`;

exports[`components/app-promo should not be visible if a note is selected 1`] = `
<div
  class="notes notes_has-active"
>
  <div>
    Notes list
  </div>
  <div>
    Note
  </div>
  <div>
    Notes slider
  </div>
  <div>
    Notifications
  </div>
  <div>
    Note delete confirmation dialog
  </div>
  <div
    class="app-promo app-promo_hidden"
  >
    <div
      class="app-promo__icon"
    />
    <div
      class="app-promo__message"
    >
      <span>
        Для редактирования заметок установите 
        <lego-components_link
          data-ref="link"
          href="https://redirect.appmetrica.yandex.com/serve/1106970954573105017?click_id={LOGID}"
          rel="noopener noreferrer"
          target="_blank"
          theme="normal"
        >
          приложение Яндекс Диск
        </lego-components_link>
      </span>
    </div>
  </div>
</div>
`;
